--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 {{ template "head.html" . }}
 
 <body>
-    <h1>{{ .title }}</h1>
+    {{ template "navheader.html" . }}
     <form action="/login" method="post">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" />
@@ -15,6 +15,7 @@
         <input type="hidden" name="check" id="check" value="{{ .check }}" />
         <input type="submit" value="Login"/>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
