--- a/templates/navheader.html
+++ b/templates/navheader.html
@@ -3,14 +3,12 @@
         <ul class="nav me-auto">
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2 active"
                     aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Restaurants</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">About</a></li>
         </ul>
         <ul class="nav">
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Login</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Sign up</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link link-body-emphasis px-2">Login</a></li>
+            <li class="nav-item"><a href="/signup" class="nav-link link-body-emphasis px-2">Sign up</a></li>
         </ul>
     </div>
 </nav>
@@ -20,7 +18,7 @@
             <svg class="bi me-2" width="40" height="32">
                 <use xlink:href="#bootstrap"></use>
             </svg>
-            <span class="fs-4">{{ .title }}</span>
+            <span class="fs-4">Food as a Service</span>
         </a>
         <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search" data-dashlane-rid="9d0e62eab26b70e3">
             <input type="search" class="form-control" placeholder="Search..." aria-label="Search"
