--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
 <body>
     {{ template "navheader.html" }}
     <div class="container">
-        <form action="/login" method="post">
+        <form action="/signup" method="post">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" name="username" id="username">
@@ -14,6 +14,10 @@
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" name="password" id="password">
+            </div>
+            <div class="mb-3">
+                <label for="confirm-password" class="form-label">Confirm password</label>
+                <input type="password" class="form-control" name="confirm-password" id="confirm-password">
             </div>
 
             <input type="hidden" name="check" id="check" value="{{ .check }}" />
