logging in and refactoring

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 {{ template "head.html" . }}
 
 <body>
-    {{ template "navheader.html" }}
+    {{ template "navheader.html" . }}
     <div class="container">
         <form action="/signup" method="post">
             <div class="mb-3">
