--- a/templates/navheader.html
+++ b/templates/navheader.html
@@ -1,14 +1,16 @@
 <nav class="py-2 bg-body-tertiary border-bottom">
     <div class="container d-flex flex-wrap">
         <ul class="nav me-auto">
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2 active"
-                    aria-current="page">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Restaurants</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">About</a></li>
         </ul>
         <ul class="nav">
+            {{if .signedIn}}
+            <li class="nav-item"><a href="/logout" class="nav-link link-body-emphasis px-2">Logout</a></li>
+            {{else}}
             <li class="nav-item"><a href="/login" class="nav-link link-body-emphasis px-2">Login</a></li>
             <li class="nav-item"><a href="/signup" class="nav-link link-body-emphasis px-2">Sign up</a></li>
+            {{end}}
         </ul>
     </div>
 </nav>
