--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -5,6 +5,10 @@
 
 <body>
     {{ template "navheader.html" . }}
+    <div class="container">
+        <h1>{{ .title }}</h1>
+        <h2>{{ .restaurantId }}</h2>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
